--- a/index.html
+++ b/index.html
@@ -11,9 +11,23 @@
 </head>
 <body>
 <div class="container">
-   <h1>
-   Thuý Phương Phạm
-   </h1> 
+    <div class ="weather">
+        <div class ="form">
+<input >
+        </div>
+        <div class="WeatherInfo">
+            <h1>
+                City Name
+            </h1> 
+            Thursday 18:39, clear sky
+            Humidity: 57%, Wind: 0.89km/h
+            Icon -1°C
+        </div>
+
+        <div class ="WeatherForecast">
+
+        </div>
+    </div>
 </div>
    <script src="src/java.js"></script>
 </body>
