--- a/index.html
+++ b/index.html
@@ -11,23 +11,74 @@
 </head>
 <body>
 <div class="container">
-    <div class ="weather">
-        <div class ="form">
-<input >
-        </div>
-        <div class="WeatherInfo">
-            <h1>
-                City Name
-            </h1> 
-            Thursday 18:39, clear sky
-            Humidity: 57%, Wind: 0.89km/h
-            Icon -1°C
-        </div>
-
-        <div class ="WeatherForecast">
-
-        </div>
+  <div class ="weather">
+    <div class ="form">
+      <input type="text" placeholder ="Enter a city">
+      <input type ="submit" class="btn btn-success w-100" value ="Search">
     </div>
+  <div class="WeatherInfo">
+      <h1>
+        City Name
+      </h1> 
+        Thursday 18:39, clear sky
+    <div>
+        Humidity: 57%, Wind: 0.89km/h
+    </div>
+        Icon -1°C
+  </div> 
+  <div class ="WeatherForecast row">
+    <div class ="col">
+    <div class = "forecast-time"></div>
+        Thu 
+    <div class ="weather-icon">
+        Icon
+    </div> 
+    <div class ="weather-temperature">
+        Temperature
+    </div>
+    </div>
+    <div class="col">
+      <div class="forecast-time"></div>
+      Thu
+      <div class="weather-icon">
+        Icon
+      </div>
+      <div class="weather-temperature">
+        Temperature
+      </div>
+    </div>
+    <div class="col">
+      <div class="forecast-time"></div>
+      Thu
+      <div class="weather-icon">
+        Icon
+      </div>
+      <div class="weather-temperature">
+        Temperature
+      </div>
+    </div>
+    <div class="col">
+      <div class="forecast-time"></div>
+      Thu
+      <div class="weather-icon">
+        Icon
+      </div>
+      <div class="weather-temperature">
+        Temperature
+      </div>
+    </div>
+    <div class="col">
+      <div class="forecast-time"></div>
+      Thu
+      <div class="weather-icon">
+        Icon
+      </div>
+      <div class="weather-temperature">
+        Temperature
+      </div>
+    </div>
+  </div>
+  </div>
 </div>
    <script src="src/java.js"></script>
 </body>
