--- a/index.html
+++ b/index.html
@@ -10,25 +10,44 @@
     <link rel="stylesheet" href="src/styles.css"/>
 </head>
 <body>
+<div class="app">
 <div class="container">
   <div class ="weather">
     <div class ="form">
-      <input type="text" placeholder ="Enter a city">
-      <input type ="submit" class="btn btn-success w-100" value ="Search">
+      <div class="row">
+        <div class="col-9">
+        <input type="search" placeholder="Enter a city.." class="form-control search-input">
+        </div>
+        <div class="col-3">
+        <input type="submit" class="btn btn-success w-100" value="Search">
+      </div>
+      </div>
     </div>
   <div class="WeatherInfo">
-      <h1>
-        City Name
-      </h1> 
+    <div class ="row"> 
+      <div class ="col-6">
+        <div class="cityInfo">
+        <h1>
+          Ha Noi
+        </h1> 
         Thursday 18:39, clear sky
-    <div>
-        Humidity: 57%, Wind: 0.89km/h
+        <div>
+          Humidity: 57%, Wind: 0.89km/h
+        </div>
+      </div>
+      </div>
+      <div class="col-6">
+        <div class ="icon">
+          <span> 🔆 20</span>
+          <span class ="unit"> °C </span>
+        </div>
     </div>
-        Icon -1°C
+    </div>
   </div> 
+  <hr/>
   <div class ="WeatherForecast row">
     <div class ="col">
-    <div class = "forecast-time"></div>
+    <div class = "forecastTime"></div>
         Thu 
     <div class ="weather-icon">
         Icon
@@ -38,7 +57,7 @@
     </div>
     </div>
     <div class="col">
-      <div class="forecast-time"></div>
+      <div class="forecastTime"></div>
       Thu
       <div class="weather-icon">
         Icon
@@ -48,7 +67,7 @@
       </div>
     </div>
     <div class="col">
-      <div class="forecast-time"></div>
+      <div class="forecastTime"></div>
       Thu
       <div class="weather-icon">
         Icon
@@ -58,7 +77,7 @@
       </div>
     </div>
     <div class="col">
-      <div class="forecast-time"></div>
+      <div class="forecastTime"></div>
       Thu
       <div class="weather-icon">
         Icon
@@ -68,7 +87,7 @@
       </div>
     </div>
     <div class="col">
-      <div class="forecast-time"></div>
+      <div class="forecastTime"></div>
       Thu
       <div class="weather-icon">
         Icon
@@ -78,7 +97,11 @@
       </div>
     </div>
   </div>
-  </div>
+</div>
+<div class="project">
+This project was coded by Iris Pham and is open-sourced on GitHub and hosted on Netlify
+</div>
+</div>
 </div>
    <script src="src/java.js"></script>
 </body>
