Update position Css

--- a/index.html
+++ b/index.html
@@ -46,14 +46,15 @@
   </div> 
   <hr/>
   <div class ="WeatherForecast row">
-    <div class ="col">
+    <div class="col">
     <div class = "forecastTime"></div>
         Thu 
     <div class ="weather-icon">
         Icon
     </div> 
     <div class ="weather-temperature">
-        Temperature
+        <span class="highest-temperature"> 7° </span>
+        <span class ="lowest-temperature"> 3° </span>
     </div>
     </div>
     <div class="col">
@@ -63,7 +64,8 @@
         Icon
       </div>
       <div class="weather-temperature">
-        Temperature
+        <span class="highest-temperature"> 7° </span>
+        <span class="lowest-temperature"> 3° </span>
       </div>
     </div>
     <div class="col">
@@ -73,7 +75,8 @@
         Icon
       </div>
       <div class="weather-temperature">
-        Temperature
+        <span class="highest-temperature"> 7°</span>
+        <span class="lowest-temperature"> 3° </span>
       </div>
     </div>
     <div class="col">
@@ -83,7 +86,8 @@
         Icon
       </div>
       <div class="weather-temperature">
-        Temperature
+        <span class="highest-temperature"> 7° </span>
+        <span class="lowest-temperature"> 3° </span>
       </div>
     </div>
     <div class="col">
@@ -93,7 +97,8 @@
         Icon
       </div>
       <div class="weather-temperature">
-        Temperature
+        <span class="highest-temperature"> 7° </span>
+        <span class="lowest-temperature"> 3° </span>
       </div>
     </div>
   </div>
