--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Rock+3D&display=swap" rel="stylesheet">
     <title>Week 7</title>
     <link rel="stylesheet" href="src/styles.css"/>
 </head>
@@ -19,7 +22,7 @@
         <input type="search" placeholder="Enter a city.." class="form-control search-input">
         </div>
         <div class="col-3">
-        <input type="submit" class="btn btn-success w-100" value="Search">
+        <input type="submit" class="btn btn-warning w-100" value="Search" style=" color:#041C32">
       </div>
       </div>
     </div>
@@ -32,7 +35,7 @@
         </h1> 
         Thursday 18:39, clear sky
         <div>
-          Humidity: 57%, Wind: 0.89km/h
+          Humidity: <span class="humidity"> 57% </span>, Wind: <span class="wind">0.89km/h</span>
         </div>
       </div>
       </div>
@@ -104,7 +107,7 @@
   </div>
 </div>
 <div class="project">
-This project was coded by Iris Pham and is open-sourced on GitHub and hosted on Netlify
+This project was coded by Iris Pham and is <a href="" class="word" target="_blank" rel="noopener noreferrer">open-sourced on GitHub</a> and <a href=""class="word" target="_blank" rel="noopener noreferrer">hosted on Netlify </a>
 </div>
 </div>
 </div>
