--- a/index.html
+++ b/index.html
@@ -36,13 +36,14 @@
         </h1> 
         <span id ="date">Thursday 18:39</span>, <span id ="description">clear sky</span>
         <div>
-          Humidity: <span id="humidity"> 57% </span>, Wind: <span id="wind">0.89km/h</span>
+          Humidity: <span id="humidity"> 57% </span>, Wind: <span id="wind">0.89</span> km/h
         </div>
       </div>
       </div>
       <div class="col-6">
         <div class ="icon">
-           🔆 <span id ="temperature">20</span>
+          <img src ="https://i.pinimg.com/originals/ac/6e/06/ac6e06f77344e757114f4b3ac9fdd79c.gif" id ="icon" style="max-width:80px">
+          <span id ="temperature">20</span>
           <span class ="unit"> °C </span>
         </div>
     </div>
