--- a/index.html
+++ b/index.html
@@ -17,16 +17,16 @@
 <div class="app">
 <div class="container">
   <div class ="weather">
-    <div class ="form">
+    <form id ="search-form">
       <div class="row">
         <div class="col-9">
-        <input type="search" placeholder="Enter a city.." class="form-control search-input">
+        <input type="search" placeholder="Enter a city.." class="form-control search-input" id ="city-input">
         </div>
         <div class="col-3">
         <input type="submit" class="btn btn-warning w-100" value="Search" style=" color:#041C32">
       </div>
       </div>
-    </div>
+    </form>
   <div class="WeatherInfo">
     <div class ="row"> 
       <div class ="col-6">
