implemented the unit

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         <div class ="icon">
           <img src ="https://i.pinimg.com/originals/ac/6e/06/ac6e06f77344e757114f4b3ac9fdd79c.gif" id ="icon" style="max-width:80px">
           <span id ="temperature">20</span>
-          <span class ="unit"> °C </span>
+          <span class ="unit"> <a href="#" id="Cdegree" class ="active">°C|<a href ="#" id ="Fdegree">°F </a></span>
         </div>
     </div>
     </div>
