update Github and Netlify link

--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
   </div>
 </div>
 <div class="project">
-This project was coded by Iris Pham and is <a href="" class="word" target="_blank" rel="noopener noreferrer">open-sourced on GitHub</a> and <a href=""class="word" target="_blank" rel="noopener noreferrer">hosted on Netlify </a>
+This project was coded by Iris Pham and is <a href="https://github.com/IRISPHAM3112/weather-app" class="word" target="_blank" rel="noopener noreferrer">open-sourced on GitHub</a> and <a href="https://blissful-roentgen-dd25a3.netlify.app/"class="word" target="_blank" rel="noopener noreferrer">hosted on Netlify </a>
 </div>
 </div>
 </div>
